--- a/views/about.haml
+++ b/views/about.haml
@@ -51,9 +51,9 @@
   
   .casual-intro
     %p
-      Hello and thank you for visiting my website!! I am a graphic designer and web developer based in San Francisco, California. As a frontend developer, I specialize in the user interface experience and often take on projects from the design phase to frontend development. I have been developing web applications for several years now, mostly on the Rails framework, and have extensive experience collaborating with designers, backend developers and software engineers.
+      Hello and thank you for visiting my website!! I am a web developer based in San Francisco, California. I am both nerd and designer at heart. I spend most of my time coding up user interfaces with HTML and CSS, handing off compliant and pixel-perfect HTML for engineers to flesh out with backend functionality. In my spare time, I create designs for my own personal websites and for my friends and loved ones (which I implement too). 
     %p
-      Outside of the professional realm, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog, both incredibly adorable. I love interior design, furniture design, classical music, and cooking. Please feel free to glance at my portfolio and do not hesitate to 
+      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, playing oboe, and cooking. Please feel free to glance at my portfolio and do not hesitate to 
       %a(href="mailto:ana.enders@gmail.com")contact me
       with any feedback or questions.
     %p
