--- a/views/index.haml
+++ b/views/index.haml
@@ -12,8 +12,9 @@
 
 .portfolio
   .web.professional   
-    .web-logo
-      %img(src="/images/portfolio/web/web_logo_professional.png" alt="web")/
+    .section_label
+      %span
+        professional HTML & CSS
   
     .small-thumb#tiffany_opener
       %img(src="/images/portfolio/web/tiffany.png" alt="Tiffany Ring Finder")/
@@ -123,8 +124,9 @@
         %img(src="/images/portfolio/web/cinemax.png" alt="cinemax")/
 
   .web.personal    
-    .web-logo
-      %img(src="/images/portfolio/web/web_logo_personal.png" alt="web")/
+    .section_label
+      %span
+        personal HTML, CSS & design
       
     .small-thumb#orsella_opener
       %a(href="#")
@@ -137,8 +139,9 @@
       %img(src="/images/portfolio/web/kayandy.png" alt="kayleigh and andy")/
   
   .print
-    .print-logo
-      %img(src="/images/portfolio/print/print_logo_right.png" alt="print")/
+    .section_label
+      %span 
+        print
   
     .small-thumb#bwcollage1_opener
       %img(src="/images/portfolio/print/bw1.jpg" alt="black and white")/
@@ -169,8 +172,9 @@
           %img(src="/images/portfolio/print/signage.png" alt="signage")/
     
   .woodwork
-    .woodwork-logo
-      %img(src="/images/portfolio/woodwork/woodwork_logo.png" alt="woodwork")/
+    .section_label
+      %span
+        woodwork
           
     .small-thumb.one#sycamore_opener
       %img(src="/images/portfolio/woodwork/wood1.jpg" alt="wood")/
