--- a/views/about.haml
+++ b/views/about.haml
@@ -67,7 +67,7 @@
       %span <%= time %> from <%= from %>
 
   .resume
-    %h1 Web Designer and Frontend Developer
+    %h1 Web Developer
     .clear
     %summary 
       I am a website developer interested in user interfaces and website implementation. Most of the sites I&rsquo;ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, JavaScript (through JQuery), and basic Ruby. Due to my basic understanding of Object Oriented Programming and my personal interest in programming languages, such as Java, Ruby and Python, I feel comfortable tinkering with frontend code written by other developers, though I do not write much code myself. All the while, I am a designer and creative at heart, which I express primarily through Photoshop. My design intuition and experience as a developer have made me particularly qualified to do site-wide QA testing on various platforms and operating systems. In short, I am the pixel&#45;perfect attention&#45;to&#45;detail glue between the design and engineering teams using my skills to facilitate and contribute to both worlds.
