--- a/views/about.haml
+++ b/views/about.haml
@@ -51,9 +51,11 @@
   
   .casual-intro
     %p
-      Hello and thank you for visiting my website!! I am a web developer based in San Francisco, California. I am both nerd and designer at heart. I spend most of my time coding up user interfaces with HTML and CSS, handing off compliant and pixel-perfect HTML for engineers to flesh out with backend functionality. In my spare time, I create designs for my own personal websites and for my friends and loved ones (which I implement too). 
+      Hello and thank you for visiting my website!! I am a web developer based in San Francisco and New York City. I am both nerd and designer at heart. I spend most of my time coding up user interfaces and handing off compliant and pixel-perfect views for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them, and sometimes I do logos and branding work that require no coding. Whatever the case is, the goal is to create an awesome web experience.
     %p
-      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, playing oboe, and cooking. Please feel free to glance at my portfolio and do not hesitate to 
+      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. I have an elegant, graceful black cat and a loud, silly french bulldog; both incredibly adorable. I love interior design, modern and vintage furniture, playing oboe, the French language, and cooking. I studied music performance at Carnegie Mellon University, then took up wood working, then began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done. 
+    %p
+      Please feel free to glance at my portfolio and do not hesitate to 
       %a(href="mailto:ana.enders@gmail.com")contact me
       with any feedback or questions.
     %p
@@ -67,7 +69,7 @@
       %span <%= time %> from <%= from %>
 
   .resume
-    %h1 Junior Frontend Developer
+    %h1 Frontend Developer
     .clear
     %summary 
       I am a website developer interested in user interfaces and website implementation. Most of the sites I&rsquo;ve worked on live on the Rails framework, in which I write web compliant views in HTML, HAML, CSS, SASS, JavaScript (through JQuery), and basic Ruby. Due to my basic understanding of Object Oriented Programming and my personal interest in programming languages, such as Java, Ruby and Python, I feel comfortable tinkering with frontend code written by other developers. All the while, I am a designer and creative at heart, which I express primarily through Photoshop. My design intuition and experience as a developer have made me particularly qualified to do site-wide QA testing on various platforms and operating systems. In short, I am the pixel&#45;perfect attention&#45;to&#45;detail glue between the design and engineering teams using my skills to facilitate and contribute to both worlds.
@@ -99,7 +101,7 @@
             %td Certificate of Completion for Intermediate Java Programming 
             %td Certificate of Completion for Introduction to Java Programming
             %td MFA Design + Technology	
-            %td{:rowspan => "2"} BFA European Studies, Music Performance	
+            %td{:rowspan => "2"} BFA Music Performance, European Studies	
             %td{:rowspan => "2"} Certificate in Intensive Language Studies in French	
           %tr 
             %td Online Course for Professional Development
@@ -191,7 +193,7 @@
                     %th 
                       Freelance Frontend Developer
                     %th 
-                      Junior Frontend Developer
+                      Frontend Developer
                     %th 
                       Design Intern
                     %th 
