--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -105,20 +105,37 @@ $aqua: #59edd3;
 
 @font-face {
   font-family: Rockwell;
-  src: url('/fonts/Rockwell.ttf'),
-       url('/fonts/Rockwell.eot'); /* IE9+ */
+  src: url('/fonts/Rockwell.ttf');
+  src: url('/fonts/Rockwell.eot'); /* IE9+ */
+  font-style: normal;     
+}
+
+@font-face {
   font-family: BotonBQ;
-  src: url('/fonts/BotonBQ.ttf'),
-      url('/fonts/BotonBQ.ttf'); /* IE9+ */
-  font-family: Archer-Light;
-  src: url('/fonts/Archer-Light-Pro.otf'),
-      url('/fonts/Archer-Light-Pro.otf'); /* IE9+ */
-  font-family: Archer-Medium;
-  src: url('/fonts/Archer-Medium-Pro.otf'),
-      url('/fonts/Archer-Medium-Pro.otf'); /* IE9+ */
+  src: url('/fonts/BotonBQ.ttf');
+  src: url('/fonts/BotonBQ.eot'); /* IE9+ */
+  font-style: normal;     
+}
+
+@font-face {
+  font-family: Archer-Book;
+  src: url('/fonts/Archer-Book-Pro.otf');
+  src: url('/fonts/Archer-Book-Pro.eot'); /* IE9+ */
+  font-style: normal;     
+}
+
+@font-face {
   font-family: TradeGothic;
-  src: url('/fonts/TradeGothicLTStd-Cn18.otf'),
-      url('/fonts/TradeGothicLTStd-Cn18.otf'); /* IE9+ */
+  src: url('/fonts/TradeGothicLTStd-Cn18.otf');
+  src: url('/fonts/TradeGothicLTStd-Cn18.eot'); /* IE9+ */
+  font-style: normal;     
+}
+
+@font-face {
+  font-family: 'TiffanyRegular';
+  src: url('/fonts/stertrom-webfont.eot');
+  src: url('/fonts/stertrom-webfont.ttf') format('truetype'), url('/fonts/stertrom-webfont.svg#webfontYd5lzfxa') format('svg');
+  font-style: normal;
 }
 
 ::selection { background-color:#fce7e7; }
@@ -363,10 +380,10 @@ img { border: 0px }
   }
   .casual-intro {
     @include bring_to_front;
-    width: 475px;
+    width: 500px;
     font-size: 13px;
     float: left;
-    padding: 0 15px 10px 0;
+    padding: 0 10px 10px 0;
     p:first-child {
       &:first-letter {
         font-size: 20px;
@@ -375,8 +392,8 @@ img { border: 0px }
   }
   .twitter-feed {
     @include bring_to_front;
-    width: 550px;
-    height: 252px;
+    width: 530px;
+    height: 330px;
     float: left;  
     overflow-y: scroll;
     .tweet {
@@ -421,13 +438,13 @@ img { border: 0px }
     h1 {
       background-color: #fff;
       margin: -10px auto 0 auto;
-      width: 310px;
+      width: 230px;
       z-index: 5;
       line-height: 1.3em;
       font-size: 24px;
       text-align: center;
       font-weight: normal;
-      font-family: "Archer-Medium", BotonBQ, Rockwell, Georgia, Serif;
+      font-family: "Archer-Book", BotonBQ, Rockwell, "TiffanyRegular", Helvetica, Serif;
     }
     summary {
       text-align: justify;
@@ -502,16 +519,16 @@ img { border: 0px }
         background-color: #FFFFFF;
         position: relative;
         z-index: 0;
-        height: 310px;
+        height: 332px;
         .slide_tiles {
           overflow: hidden;
           position: relative;
           width: 1040px;
-          height: 310px;
+          height: 332px;
           .next_container {
             z-index: 200;
             background-color: #fff;
-            width: 50px;
+            width: 100px;
             height: 310px;
             opacity: 0.6;
             filter: alpha(opacity=60); /* For IE8 and earlier */
@@ -520,8 +537,8 @@ img { border: 0px }
             right: 0px;
             .next {
               z-index: 400;
-              padding: 147px 0 0 10px;
-              float: left;
+              padding: 147px 20px 0 0px;
+              float: right;
               height: 23px;
               width: 30px;
               a { 
@@ -541,6 +558,8 @@ img { border: 0px }
             left: 0px;
             .previous { 
               @extend .next;
+              padding: 147px 0px 0 20px;
+              float: left;
               a {
                 background: url('/images/btns/previous.png') no-repeat 0px 0px;
                 &:hover { background-position: 0px -22px; }
@@ -566,7 +585,7 @@ img { border: 0px }
         @extend .generic;  
         font-family: Georgia;
         margin-top: 25px;
-        th { font-family: "Archer-Medium", BotonBQ, Rockwell, Georgia, Serif; font-size: 15px; font-weight: normal }
+        th { font-family: "Archer-Medium", BotonBQ, Rockwell, "TiffanyRegular", Georgia, Serif; font-size: 15px; font-weight: normal }
         th, td { 
           line-height: 1.3em; 
           text-align: left; 
@@ -574,7 +593,7 @@ img { border: 0px }
           vertical-align: top; 
           padding: 0 15px 15px 0;
           &.date { 
-            font-family: "Archer-Medium", BotonBQ, Rockwell, Georgia, Serif;
+            font-family: "Archer-Medium", BotonBQ, Rockwell, "TiffanyRegular", Georgia, Serif;
             clear: both; 
             font-weight: normal;
             margin-top: 5px;
@@ -637,7 +656,7 @@ img { border: 0px }
       text-align: center;
       h4 { 
         text-transform: capitalize;
-        font-family: "Archer-Medium", BotonBQ, Rockwell, Georgia, Serif;
+        font-family: "Archer-Medium", BotonBQ, Rockwell, "TiffanyRegular", Georgia, Serif;
         margin: 0px;
         font-size: 20px;
         padding: 30px 150px; 
