--- a/views/about.haml
+++ b/views/about.haml
@@ -205,7 +205,7 @@
                     %td.date 
                       New York, NY / San Francisco, CA
                       .job
-                        %a(href="http://www.thedailymuse.com/")
+                        %a(href="http://www.thedailymuse.com/" target="_blank")
                           The Daily Muse
                     %td.date 
                       San Francisco, CA
