edits to fonts for ff and chrome, new portfolio item

--- a/views/index.haml
+++ b/views/index.haml
@@ -14,8 +14,11 @@
   .web.professional   
     .section_label
       %span
-        professional HTML & CSS
+        professional web development & design
   
+    .small-thumb#hackbright_opener
+      %img(src="/images/portfolio/web/hackbright.png" alt="Hackbright Academy")/
+    
     .small-thumb#tiffany_opener
       %img(src="/images/portfolio/web/tiffany.png" alt="Tiffany Ring Finder")/
       
@@ -126,7 +129,7 @@
   .web.personal    
     .section_label
       %span
-        personal HTML, CSS & design
+        personal web development & design
       
     .small-thumb#orsella_opener
       %a(href="#")
@@ -191,6 +194,16 @@
 .clear
 
 / START LARGE PROJECT DESCRIPTIONS
+
+#hackbright
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/hackbright.jpg" alt="Hackbright Academy")/
+      .project-description
+        %span Hackbright Academy Logo
+        %p 
+          Was contracted to come up with a logo for this programing and development academy. 
 
 #tiffany    
   .detail-container
