--- a/views/index.haml
+++ b/views/index.haml
@@ -201,9 +201,9 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/hackbright.jpg" alt="Hackbright Academy")/
       .project-description
-        %span Hackbright Academy Logo
+        %span Logo Design&nbsp;&nbsp;••&nbsp;&nbsp;Hackbright Academy
         %p 
-          Was contracted to come up with a logo for this programing and development academy. 
+          I was contracted to design a logo for this super awesome all-girl programing academy. As a new institution, there was a lot of emphasis on getting the branding and logo just right. I wanted the logo to be feminine yet gender neutral enough in the event that they open the course to men as well.
 
 #tiffany    
   .detail-container
@@ -211,7 +211,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/tiffany.jpg" alt="Tiffany")/
       .project-description
-        %span Tiffany &#38; Co. Ring Finder
+        %span Development&nbsp;&nbsp;••&nbsp;&nbsp;Tiffany &#38; Co. Ring Finder
         %p 
           The Ring Finder app is a private voting application wrapped inside of facebook or as a standalone web page. A user would create a list of rings they like using the iPhone Ring Finder app, and share it with their friends by emailing a unique URL, which link guests to the web or facebook, depending on how one logs on. There, people can vote and comment on their favorite rings. My role included writing the views (HTML/CSS) on a Rails framework for the web UI.
           
@@ -234,7 +234,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/orsella.jpg" alt="Orsella")/
       .project-description
-        %span Orsella
+        %span Design & Development&nbsp;&nbsp;••&nbsp;&nbsp;Orsella
         %p 
           This is a super simple site for my long time friend. It's a snazzy, modern site with a fullscreen slideshow rotating through some of her favorite images. The social networking icons link visitors to her online worlds, such as Facebook, Twitter, etc. I designed and wrote the UI in HTML5, CSS3, and plugged in a JavaScript Slideshow. Server configuration and deployment were handled by
           %a(href="http://ianenders.com/" target="_blank")
@@ -249,7 +249,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/ana_ian.jpg" alt="Ana and Ian")/
       .project-description
-        %span Ian & Ana's Wedding
+        %span Design & Development&nbsp;&nbsp;••&nbsp;&nbsp;Ian & Ana's Wedding
         %p 
           For our wedding, 
           %a(href="http://ianenders.com/" target="_blank")
@@ -294,7 +294,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/kayandy.jpg" alt="Kaleigh and Andy")/
       .project-description
-        %span Kayleigh & Andy's Wedding
+        %span Design & Development&nbsp;&nbsp;••&nbsp;&nbsp;Kayleigh & Andy's Wedding
         %p Designed and implemented the UI for my sister-in-law and her husband's wedding. It allowed guests to RSVP, read information about the wedding itinerary, read about the couple, their honeymoon plans, and how to access their wedding registry.
                         
 #kico     
