--- a/views/layout.haml
+++ b/views/layout.haml
@@ -32,9 +32,10 @@
     
   %body
     .content
-      %header
+      %header     
         %a(href="/")
-          %img(src="/images/btns/logo.jpg" alt="anaenders")/
-      
+          ana enders
+        .dots
+          %img(src="/images/header.png")/
       .wrapper
         = yield
