--- a/views/about.haml
+++ b/views/about.haml
@@ -257,7 +257,7 @@
                       %br/
                       (1 year 1 month)	
                   %tr 
-                    %td Lead frontend developer designing and implementing features for The Daily Muse, focusing primarily on their job board, The Company Muse.
+                    %td Senior frontend engineer designing and implementing features for The Daily Muse, focusing primarily on their job board, The Company Muse.
                     %td Freelancing for old clients in need of frontend adjustments to their existing sites.
                     %td As a member of the development team, I worked closely with the designers, backend programmers, and software engineers in producing custom sites and content management software.
                     %td In addition to being a photo shoot and set design assistant, I worked on image post-production editing, logo design, graphic design, web design and web development using Photoshop, HTML, CSS and Flash.
