--- a/views/index.haml
+++ b/views/index.haml
@@ -201,7 +201,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/hackbright.jpg" alt="Hackbright Academy")/
       .project-description
-        %span Logo Design&nbsp;&nbsp;••&nbsp;&nbsp;Hackbright Academy
+        %span Logo Design&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Hackbright Academy
         %p 
           I was contracted to design a logo for this super awesome all-girl programing academy. As a new institution, there was a lot of emphasis on getting the branding and logo just right. I wanted the logo to be feminine yet gender neutral enough in the event that they open the course to men as well.
 
@@ -211,7 +211,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/tiffany.jpg" alt="Tiffany")/
       .project-description
-        %span Development&nbsp;&nbsp;••&nbsp;&nbsp;Tiffany &#38; Co. Ring Finder
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Tiffany &#38; Co. Ring Finder
         %p 
           The Ring Finder app is a private voting application wrapped inside of facebook or as a standalone web page. A user would create a list of rings they like using the iPhone Ring Finder app, and share it with their friends by emailing a unique URL, which link guests to the web or facebook, depending on how one logs on. There, people can vote and comment on their favorite rings. My role included writing the views (HTML/CSS) on a Rails framework for the web UI.
           
@@ -221,7 +221,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/juicegeneration.jpg" alt="Juice Generation")/
       .project-description
-        %span Juice Generation
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Juice Generation
         %p 
           Developed the front end of this detox juice-centric e-commerce site by writing the HTML, CSS, basic Ruby and some Javascript(JQuery) for the user interface. 
           URL:
@@ -234,7 +234,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/orsella.jpg" alt="Orsella")/
       .project-description
-        %span Design & Development&nbsp;&nbsp;••&nbsp;&nbsp;Orsella
+        %span Design&nbsp;&#38;&nbsp;Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Orsella
         %p 
           This is a super simple site for my long time friend. It's a snazzy, modern site with a fullscreen slideshow rotating through some of her favorite images. The social networking icons link visitors to her online worlds, such as Facebook, Twitter, etc. I designed and wrote the UI in HTML5, CSS3, and plugged in a JavaScript Slideshow. Server configuration and deployment were handled by
           %a(href="http://ianenders.com/" target="_blank")
@@ -249,7 +249,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/ana_ian.jpg" alt="Ana and Ian")/
       .project-description
-        %span Design & Development&nbsp;&nbsp;••&nbsp;&nbsp;Ian & Ana's Wedding
+        %span Design&nbsp;&#38;&nbsp;Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Ian&nbsp;&#38;&nbsp;Ana's Wedding
         %p 
           For our wedding, 
           %a(href="http://ianenders.com/" target="_blank")
@@ -262,7 +262,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/scully.jpg" alt="Scully & Scully")/
       .project-description
-        %span Scully & Scully
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Scully&nbsp;&#38;&nbsp;Scully
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -278,7 +278,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/mally.jpg" alt="Mally Beauty")/
       .project-description
-        %span Mally Beauty
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Mally Beauty
         %p 
           Mally Beauty take two, a redesign of the old Mally, which I also worked on (see below). This redesign presents a slicker user interface and focuses heavily on social networking. Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -294,7 +294,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/kayandy.jpg" alt="Kaleigh and Andy")/
       .project-description
-        %span Design & Development&nbsp;&nbsp;••&nbsp;&nbsp;Kayleigh & Andy's Wedding
+        %span Design&nbsp;&#38;&nbsp;Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Kayleigh&nbsp;&#38;&nbsp;Andy&rsquo;s Wedding
         %p Designed and implemented the UI for my sister-in-law and her husband's wedding. It allowed guests to RSVP, read information about the wedding itinerary, read about the couple, their honeymoon plans, and how to access their wedding registry.
                         
 #kico     
@@ -303,7 +303,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/kicokids.jpg" alt="Kico Kids")/
       .project-description
-        %span Kico Kids
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Kico Kids
         %p 
           %p 
             Partnered with 
@@ -320,7 +320,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/ajaline.jpg" alt="Ajaline")/
       .project-description
-        %span Ajaline
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Ajaline
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -333,7 +333,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/satellite.jpg" alt="Satellite Records")/
       .project-description
-        %span Satellite Records
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Satellite Records
         %p 
           Satellite Records is a major player in the industry of digital download music with DJ's all around the world as its target audience. I contributed to the the frontend by writing HTML, CSS, to produce web compliant Rails views. 
           URL:
@@ -346,7 +346,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/kenneth_cole.jpg" alt="Kenneth Cole")/
       .project-description
-        %span Kenneth Cole
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Kenneth Cole
         %p
           For this rails application I implemented the user interface by writing web compliant Rails views in HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to create a website, a facebook page, and an interface for mobile devices, namely Webkit and Blackberry. Partnered with 
           %a(href="http://www.intersectnyc.com" target="_blank")
@@ -358,7 +358,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/bobbi_brown.jpg" alt="Bobbi Brown")/
       .project-description
-        %span Bobbi Brown
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Bobbi Brown
         %p
           As a temporary administrator for Bobbi Brown's facebook page, I created a custom tab called Beauty Rules and reconfigured third party HTML to work within the Facebook framework. Partnered with 
           %a(href="http://www.intersectnyc.com" target="_blank")
@@ -373,7 +373,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/yigalazrouel.jpg" alt="Yigal Azrouel")/
       .project-description
-        %span Yigal Azrouel
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Yigal Azrouel
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -389,7 +389,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/boast.jpg" alt="Boast USA")/
       .project-description
-        %span Boast USA
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Boast USA
         %p 
           Took an existing Rails e-commerce framework and re-skinned it to make this site. Other than the designers involved in the making of Boast, little backend support was required, which made the development phase for the most part a rare solo project. Developed the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -404,7 +404,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/lanecrawford.jpg" alt="Lane Crawford")/
       .project-description
-        %span Lane Crawford
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Lane Crawford
         %p 
           Lane Crawford Heritage 160 is a micro site that lives under the umbrella site 
           %a(href="http://www.lanecrawford.com/")
@@ -419,7 +419,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/lanecrawford_teaser.jpg" alt="Lane Crawford")/
       .project-description
-        %span Lane Crawford Teaser
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Lane Crawford Teaser
         %p 
           Lane Crawford Teaser was the prelude to Lane Crawford Heritage 160, a micro site that lives under the umbrella site 
           %a(href="http://www.lanecrawford.com/")
@@ -434,7 +434,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/grandsf.jpg" alt="Grand SF")/
       .project-description
-        %span Grand SF
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Grand SF
         %p 
           Fot Grand SF I wrote the HTML5 video player and encoded other formats of videos, such as mp4 and ogg type, to supplement flash video for browsers that are HTML5 compatible. Developed in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -449,7 +449,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/newlywish.jpg" alt="Newlywish")/
       .project-description
-        %span Newlywish
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Newlywish
         %p 
           "NewlyWish is a wedding gift registry service designed to provide to-be-weds, their friends and family, with the choice, convenience, and personalization they desire." This project involved many developers. My role included writing some of the frontend using HTML, CSS, and some very basic Ruby and JavaScript(JQuery). Developed in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -464,7 +464,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/luckyzinc.jpg" alt="Lucky Insider")/
       .project-description
-        %span Lucky Insider
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Lucky Insider
         %p 
           Lucky Magazine and American Express teamed up to create this site to promote the zync credit card. Much like its predecessor 
           %a(href="http://http://stylespotter.luckymag.com/" target="_blank")
@@ -483,7 +483,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/carlosfalchi.jpg" alt="Carlos Falchi")/
       .project-description
-        %span Carlos Falchi
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Carlos Falchi
         %p 
           For this site I wrote XML builder files and integrated much of the flash into our rails framework. To a lesser extent I partially wired up the content management system in the back-end. All HTML and CSS and most Javascript was written by me. Collaborated with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -498,7 +498,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/carlosfalchi_teaser.jpg" alt="Carlos Falchi Teaser")/
       .project-description
-        %span Carlos Falchi Teaser
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Carlos Falchi Teaser
         %p 
           Developed the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views in partnership with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -510,7 +510,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/coolercleanse.jpg" alt="Cooler Cleanse")/
       .project-description
-        %span Cooler Cleanse
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Cooler Cleanse
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -526,7 +526,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/chilewich_wholesale.jpg" alt="Chilewich Wholesale")/
       .project-description
-        %span Chilewich Wholesale
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Chilewich Wholesale
         %p 
           Developed in partnership with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -545,7 +545,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/lss.jpg" alt="Lucky Stylespotter")/
       .project-description
-        %span Lucky Stylespotter
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Lucky Stylespotter
         %p 
           Partnered with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -561,7 +561,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/bond_and_bowery.jpg" alt="Bond and Bowery")/
       .project-description
-        %span Bond & Bowery
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Bond & Bowery
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -577,7 +577,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/chilewich.jpg" alt="Chilewich")/
       .project-description
-        %span Chilewich
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Chilewich
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -593,7 +593,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/thornton.jpg" alt="Thornton Tomasetti")/
       .project-description
-        %span Thornton Tomasetti
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Thornton Tomasetti
         %p 
           Partnered with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -609,7 +609,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/liz.jpg" alt="Liz Claiborne")/
       .project-description
-        %span Liz Claiborne
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Liz Claiborne
         %p 
           Collaborated with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -622,7 +622,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/citibabes.jpg" alt="Citibabes")/
       .project-description
-        %span Citibabes
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Citibabes
         %p 
           This vibrant site is a one stop shop for city parents on the go. Partnered with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -638,7 +638,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/mally_v1.jpg" alt="Mally Beauty")/
       .project-description
-        %span Mally Beauty
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Mally Beauty
         %p 
           This site focuses on it's community and sells an extensive line of beauty products. Partnered with
           %a(href="http://intersectnyc.com" target="_blank")
@@ -651,7 +651,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/kates.jpg" alt="Kate's Paperie")/
       .project-description
-        %span Kate's Paperie
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Kate's Paperie
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -667,7 +667,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/cinemax.jpg" alt="Cinemax")/
       .project-description
-        %span Kimara Ahnert
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Kimara Ahnert
         %p 
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
@@ -683,7 +683,7 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/web/cinemax.jpg" alt="Cinemax")/
       .project-description
-        %span Cinemax
+        %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Cinemax
         %p 
           Collaborated with 
           %a(href="http://creativelabny.com/" target="_blank")
