--- a/views/index.haml
+++ b/views/index.haml
@@ -203,7 +203,9 @@
       .project-description
         %span Logo Design&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Hackbright Academy
         %p 
-          I was contracted to design a logo for this super awesome all-girl programing academy. As a new institution, there was a lot of emphasis on getting the branding and logo just right. I wanted the logo to be feminine yet gender neutral enough in the event that they open the course to men as well.
+          I was contracted to design a logo for this super awesome all-girl programing academy. As a new institution, there was a lot of emphasis on getting the branding and logo just right. I wanted the logo to be feminine yet gender neutral enough in the event that they open the course to men as well. URL:
+          %a(href="http://hackbrightacademy.com/" target="_blank")
+            http://hackbrightacademy.com/
 
 #tiffany    
   .detail-container
@@ -223,8 +225,7 @@
       .project-description
         %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Juice Generation
         %p 
-          Developed the front end of this detox juice-centric e-commerce site by writing the HTML, CSS, basic Ruby and some Javascript(JQuery) for the user interface. 
-          URL:
+          Developed the front end of this detox juice-centric e-commerce site by writing the HTML, CSS, basic Ruby and some Javascript(JQuery) for the user interface. URL:
           %a(href="http://juicegeneration.com/" target="_blank")
             http://juicegeneration.com/
 
@@ -253,8 +254,7 @@
         %p 
           For our wedding, 
           %a(href="http://ianenders.com/" target="_blank")
-            Ian 
-          (my husband) and I put together this super simple site, which listed our wedding details and allowed our guests to RSVP, pick their meals, and leave comments regarding food considerations. Ian wired up the database, while I designed and implemented the UI.
+            Ian (my husband) and I put together this super simple site, which listed our wedding details and allowed our guests to RSVP, pick their meals, and leave comments regarding food considerations. Ian wired up the database, while I designed and implemented the UI.
 
 #scully     
   .detail-container
@@ -267,8 +267,7 @@
           Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views. 
-          URL:
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views. URL:
           %a(href="http://www.scullyandscully.com" target="_blank")
             http://www.scullyandscully.com
    
@@ -283,8 +282,7 @@
           Mally Beauty take two, a redesign of the old Mally, which I also worked on (see below). This redesign presents a slicker user interface and focuses heavily on social networking. Partnered with 
           %a(href="http://intersectnyc.com" target="_blank")
             Intersect NYC 
-          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views.
-          URL: 
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views. URL: 
           %a(href="http://www.mallybeauty.com" target="_blank")
             http://www.mallybeauty.com
                               
@@ -309,8 +307,7 @@
             Partnered with 
             %a(href="http://intersectnyc.com" target="_blank")
               Intersect NYC 
-            to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views for this kid's clothing e-commerce site. 
-            URL:
+            to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views for this kid's clothing e-commerce site. URL:
             %a(href="http://www.kicokids.com" target="_blank")
               http://www.kicokids.com 
             
@@ -335,8 +332,7 @@
       .project-description
         %span Development&nbsp;&nbsp;&#8226;&#8226;&nbsp;&nbsp;Satellite Records
         %p 
-          Satellite Records is a major player in the industry of digital download music with DJ's all around the world as its target audience. I contributed to the the frontend by writing HTML, CSS, to produce web compliant Rails views. 
-          URL:
+          Satellite Records is a major player in the industry of digital download music with DJ's all around the world as its target audience. I contributed to the the frontend by writing HTML, CSS, to produce web compliant Rails views. URL:
           %a(href="http://www.satelliterecords.com" target="_blank")
             http://www.satelliterecords.com
             
