more style and copy edits

--- a/views/about.haml
+++ b/views/about.haml
@@ -130,7 +130,7 @@
                 .expert.alt
                 %label HTML
               %td
-                .beginner
+                .intermediate
                 %label Javascript
               %td 
                 .advanced.alt
@@ -189,7 +189,7 @@
                 %table{:cellspacing => "0", :cellpadding => "0"}
                   %tr
                     %th
-                      Frontend Developer
+                      Senior Frontend Engineer
                     %th 
                       Freelance Frontend Developer
                     %th 
@@ -257,7 +257,7 @@
                       %br/
                       (1 year 1 month)	
                   %tr 
-                    %td Senior frontend engineer designing and implementing features for The Daily Muse, focusing primarily on their job board, The Company Muse.
+                    %td As the frontend engineer, I design and implement features for The Daily Muse and collaborate with the backend engineer focusing primarily on The Company Muse job board.
                     %td Freelancing for old clients in need of frontend adjustments to their existing sites.
                     %td As a member of the development team, I worked closely with the designers, backend programmers, and software engineers in producing custom sites and content management software.
                     %td In addition to being a photo shoot and set design assistant, I worked on image post-production editing, logo design, graphic design, web design and web development using Photoshop, HTML, CSS and Flash.
