--- a/views/about.haml
+++ b/views/about.haml
@@ -205,8 +205,12 @@
                     %td.date 
                       New York, NY / San Francisco, CA
                       .job
+                        %a(href="http://companies.thedailymuse.com/" target="_blank")
+                          Company Muse
+                        &#47;
                         %a(href="http://www.thedailymuse.com/" target="_blank")
                           The Daily Muse
+                        
                     %td.date 
                       San Francisco, CA
                       .job
