edits to JS slideshow

--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -681,11 +681,11 @@ img { border: 0px }
     list-style-type: none;
     font-size: 11px;
     li {
-      padding-left: 32px;
+      padding-left: 22px;
       background: url('/images/blog/bullet.jpg') no-repeat 0px 0px;
       margin: 0 10px 15px 10px;
       text-align: center;
-      float: right;
+      float: left;
       a { font-weight: normal }
       span { 
         color: #6e6e6e; 
